[package]
name = "actix-web-playground"
version = "0.1.0"
authors = ["Shingo Yamazaki <shingoyamazaki00@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.1.0"
actix-session = "0.4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "user-sessions"
path = "src/user-sessions.rs"

[[bin]]
name = "shared-mutable-state"
path = "src/shared-mutable-state.rs"
